FIX(sidebar): adjust spacing

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -16,12 +16,12 @@
   flex-direction: column;
   justify-content: space-between;
 }
-/* .logo {
+.logo {
   margin-top: 50px;
   margin-left: 15px;
   width: 142px;
   height: 34px;
-} */
+}
 
 h1 {
   font-weight: bolder;
@@ -47,6 +47,7 @@ h1 {
   border-top: 1px;
   gap: 10px;
   margin-top: auto;
+
 }
 
 .list-group-item {
